--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -749,5 +749,5 @@
     <string name="acra_report_saved">Ora è possibile visitare la pagina del progetto su Github e creare un nuovo problema. Si prega di allegare al problema il rapporto precedentemente salvato. Se non si dispone ancora di un account Github, è necessario crearne uno.</string>
     <string name="action_report">Segnala</string>
     <string name="error_invalid_url">Indirizzo (URL) non valido</string>
-    <string name="lbl_certificate_validity_period">Validità: %1$s</string>
+    <string name="lbl_certificate_validity_period">Validità: %1$s - %2$s</string>
 </resources>
