--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -194,5 +194,5 @@
     <string name="option_bug_report">Báo cáo lỗi</string>
     <string name="progress_msg_searching">Đang tìm kiếm…</string>
     <string name="action_discard">Yok say</string>
-    <string name="lbl_certificate_validity_period">Tính hợp lệ: %1$s</string>
+    <string name="lbl_certificate_validity_period">Tính hợp lệ: %1$s - %2$s</string>
 </resources>
