--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -351,5 +351,5 @@
     <string name="option_barcode_scan_mode_manual">手动</string>
     <string name="info_import_complete">"导入已完成"</string>
     <string name="error_import_failed">"导入失败"</string>
-    <string name="lbl_certificate_validity_period">有效期： %1$s</string>
+    <string name="lbl_certificate_validity_period">有效期： %1$s - %2$s</string>
 </resources>
