--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -563,7 +563,7 @@
     <string name="bookshelf_my_books">My Books</string>
     <!-- Predefined/proposed name for a bookshelf when synchronizing with
          a wishlist from some websites. -->
-    <string name="bookshelf_my_wishlist">Wishlist</string>
+    <string name="bookshelf_my_wishlist">Wish List</string>
 
     <string name="lbl_strip_info_mapped_bookshelf_wishlist">Bookshelf assigned to your wish-list</string>
     <string name="lbl_strip_info_mapped_bookshelf_owned_books">Bookshelf assigned to your owned books</string>
