--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -75,6 +75,7 @@
     <string name="X_error_network_site_has_problems">Trang web không hoạt động như mong đợi.</string>
     <string name="lbl_group">Nhóm</string>
     <string name="action_report">Báo cáo</string>
+    <string name="lbl_library">Thư viện</string>
     <string name="lbl_system_default">(Ứng dụng mặc định của hệ thống)</string>
     <string name="lbl_about">Giới thiệu</string>
     <string name="action_add">Thêm</string>
@@ -91,6 +92,7 @@
     <string name="X_httpErrorIO">Không thể liên lạc với máy chủ. Hãy thử lại sau.</string>
     <string name="httpErrorFileNotFound">Không thể tìm thấy tệp đã yêu cầu.</string>
     <string name="httpError">Đã xảy ra lỗi mạng.</string>
+    <string name="lbl_pages">Trang</string>
     <string name="lbl_country">Quốc gia</string>
     <string name="action_create">Tạo</string>
     <string name="X_btn_customize">Tùy chỉnh…</string>
@@ -100,17 +102,23 @@
     <string name="action_done">Xong</string>
     <string name="action_edit">Chỉnh sửa</string>
     <string name="action_edit_ellipsis">Chỉnh sửa…</string>
+    <string name="error_backup_failed">Lưu trữ thất bại</string>
     <string name="vldt_list_message">(%1$d) %2$s</string>
     <string name="whichEditApplication">Chỉnh sửa bằng</string>
     <string name="X_action_execute">Thực hiện</string>
     <string name="action_export">Xuất</string>
     <string name="lbl_filter">Bộ lọc</string>
     <string name="lbl_search_filtered_by_x">Lọc theo: %1$s</string>
+    <string name="pe_list">Danh sách</string>
+    <string name="pe_grid">Lưới</string>
     <string name="pt_bob_font_size">Cỡ chữ</string>
+    <string name="X_lbl_completed">Đã hoàn thành</string>
     <string name="X_pg_general">Chung</string>
     <string name="X_action_go">Đến</string>
     <string name="action_help">Trợ giúp</string>
+    <string name="lbl_cover_front">Ảnh bìa</string>
     <string name="X_lbl_image">Hình ảnh</string>
+    <string name="bookshelf_my_wishlist">Danh sách muốn đọc</string>
     <string name="lbl_condition_dust_cover_none">Không</string>
     <string name="option_cover_rotate_automatic">Tự động</string>
     <string name="option_import">Nhập</string>
@@ -122,18 +130,23 @@
     <string name="progress_msg_loading">Đang tải…</string>
     <string name="lbl_location">Vị trí</string>
     <string name="action_more_ellipsis">Thêm…</string>
+    <string name="action_less_ellipsis">Hiện bớt…</string>
     <string name="X_action_move">Chuyển</string>
+    <string name="pc_bob_list">Danh sách</string>
+    <string name="pt_bob_groups">Các nhóm</string>
     <string name="pv_bob_header_filters">Bộ lọc</string>
     <string name="lbl_filters">Bộ lọc</string>
     <string name="lbl_name">Tên</string>
     <string name="X_action_next">Tiếp theo</string>
     <string name="no">Không</string>
+    <string name="disabled">Vô hiệu hóa</string>
     <string name="none">Không</string>
     <string name="lbl_tab_notes">Ghi chú</string>
     <string name="preference_not_set">Chưa đặt</string>
     <string name="whichViewApplication">Mở bằng</string>
     <string name="action_show_options">Tùy chọn</string>
     <string name="pe_camera_back">Máy ảnh mặt sau</string>
+    <string name="pe_fast_scroller_overlay_dynamic">Động</string>
     <string name="pe_camera_front">Máy ảnh mặt trước</string>
     <string name="pe_camera_other">Khác</string>
     <string name="password">Mật khẩu</string>
@@ -159,17 +172,26 @@
     <string name="username">Tên người dùng</string>
     <string name="yes">Có</string>
     <string name="size_hidden">Ẩn giấu</string>
+    <string name="book_format_hardcover">Bìa cứng</string>
+    <string name="book_format_hardcover_oblong">Bìa cứng - Hình chữ nhật</string>
     <string name="book_format_other">Khác</string>
+    <string name="lbl_author_type_cover_artist">Ảnh bìa</string>
     <string name="action_crop">"Cắt"</string>
     <string name="error_invalid_url">Địa chỉ (URL) không hợp lệ</string>
     <string name="option_select_all">"Chọn tất cả"</string>
     <string name="option_select_none">"Bỏ chọn tất cả"</string>
+    <string name="lbl_title">Tiêu đề</string>
     <string name="lbl_description">Mô tả</string>
     <string name="option_barcode_scan_mode_manual">Thủ công</string>
+    <string name="lbl_date_added">Ngày thêm</string>
+    <string name="lbl_date_added_day">Ngày thêm</string>
+    <string name="option_archive_type_backup_zip">Sao lưu (.zip)</string>
     <string name="info_import_complete">"Nhập xong"</string>
     <string name="error_import_failed">"Nhập không thành công"</string>
     <string name="httpErrorTimeout">Kết nối đến máy chủ đã hết thời gian chờ.</string>
     <string name="pc_camera">Máy ảnh</string>
+    <string name="lbl_sort_ascending">Tăng dần</string>
+    <string name="lbl_sort_descending">Giảm dần</string>
     <string name="lbl_unread">Chưa đọc</string>
     <string name="error_import_failed_for_record">Nhập không thành công (%1$s)</string>
     <string name="X_lbl_system">(Hệ thống)</string>
@@ -179,6 +201,7 @@
     <string name="lbl_day">Ngày</string>
     <string name="lbl_certificate_issued_to">Cấp cho: %1$s</string>
     <string name="progress_msg_searching_site">Đang tìm kiếm %1$s</string>
+    <string name="progress_msg_downloading">Đang tải xuống…</string>
     <string name="cd_clear_text_end_icon">Xóa văn bản</string>
     <string name="lbl_moving_data">Di chuyển dữ liệu</string>
     <string name="bob_empty_field">(Trống)</string>
