--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -748,4 +748,5 @@
     <string name="action_report">Αναφορά</string>
     <string name="error_invalid_url">Μη έγκυρη διεύθυνση (URL)</string>
     <string name="lbl_certificate_validity_period">Ισχύς: %1$s - %2$s</string>
+    <string name="lbl_reading">Ανάγνωση</string>
 </resources>
