--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -747,4 +747,5 @@
     <string name="action_report">Melden</string>
     <string name="error_invalid_url">Ongeldig adres (URL)</string>
     <string name="lbl_certificate_validity_period">Geldigheid: %1$s - %2$s</string>
+    <string name="lbl_reading">Aan het lezen</string>
 </resources>
