--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -769,4 +769,5 @@
     <string name="action_report">Zgłoś</string>
     <string name="error_invalid_url">Nieprawidłowy adres (URL)</string>
     <string name="lbl_certificate_validity_period">Ważność: %1$s - %2$s</string>
+    <string name="lbl_reading">Czytane</string>
 </resources>
