--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -766,4 +766,5 @@
     <string name="action_report">Отправить отчет</string>
     <string name="error_invalid_url">Неверный адрес (URL)</string>
     <string name="lbl_certificate_validity_period">Срок действия: %1$s - %2$s</string>
+    <string name="lbl_reading">Читаю</string>
 </resources>
