--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -756,4 +756,5 @@
     <string name="action_report">Bildir</string>
     <string name="error_invalid_url">Geçersiz adres (URL)</string>
     <string name="lbl_certificate_validity_period">Geçerlilik: %1$s - %2$s</string>
+    <string name="lbl_reading">Okunuyor</string>
 </resources>
